--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,80 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 10px sans-serif;
 }
 
-a {
-  color: #00B7FF;
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.bar {
+  fill: orange;
+}
+
+.bar:hover {
+  fill: orangered ;
+}
+
+.x.axis path {
+  display: none;
+}
+
+.d3-tip {
+  line-height: 1;
+  font-weight: bold;
+  padding: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 2px;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.8);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+/* Style northward tooltips differently */
+.d3-tip.n:after {
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+}
+
+#upper_body{
+  width: 100%;
+  height: 250px;
+  background-color: orange;
+  position: relative;
+}
+
+#search_wrapper{
+  width: 700px;
+  margin: 0 auto;
+  position: absolute;
+  bottom: 5px;
+  transform: translate(-50%, -50%);
+  left: 50%;
+}
+
+#lower_body{
+  width:100%;
+  height:500px;
+  /*background-color: green;*/
+}
+
+#graph_wrapper{
+  width:960px;
+  height: 300px;
+  /*background-color: red;*/
+  margin: 0 auto;
 }
