--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
+
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1"/>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../public/javascripts/script.js"></script>
+    <title>Analyse Sentiment</title>
 </head>
-
 <body>
-<svg style="width:500px;height:500px;border:1px lightgray solid;"></svg>
+<div id="upper_body">
+    <div id="search_wrapper">
+        <div class="input-group">
+            <input type="text" class="form-control" name="q" placeholder="Search.." id="search_key" value="">
+            <span class="input-group-btn">
+							<button class="btn btn-info" type="submit" onclick="Search()">  Search  </button>
+					</span>
+        </div>
+    </div>
+</div>
+<div id="lower_body">
+    <div id="graph_wrapper">
+        <div id="graph"></div>
+    </div>
+</div>
 </body>
 </html>
