--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,38 @@
+/*Imports*/
+@import url(http://fonts.googleapis.com/css?family=Cabin:400);
+
+
+@media screen and (-webkit-min-device-pixel-ratio:0)
+{
+  body {
+    font: 10px sans-serif;
+    background: #45484d;
+    background: -moz-radial-gradient(center, ellipse cover,  #45484d 0%, #000000 100%);
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#45484d), color-stop(100%,#000000));
+    background: -webkit-radial-gradient(center, ellipse cover,  #45484d 0%,#000000 100%);
+    background: -o-radial-gradient(center, ellipse cover,  #45484d 0%,#000000 100%);
+    background: -ms-radial-gradient(center, ellipse cover,  #45484d 0%,#000000 100%);
+    background: radial-gradient(ellipse at center,  #45484d 0%,#000000 100%);
+    width: auto;
+    height: 100%;
+  }
+}
+
+/*Previous one does not work in IE & FireFox */
 body {
   font: 10px sans-serif;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background: #45484d;
+  background: -moz-radial-gradient(center, ellipse cover,  #45484d 0%, #000000 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#45484d), color-stop(100%,#000000));
+  background: -webkit-radial-gradient(center, ellipse cover,  #45484d 0%,#000000 100%);
+  background: -o-radial-gradient(center, ellipse cover,  #45484d 0%,#000000 100%);
+  background: -ms-radial-gradient(center, ellipse cover,  #45484d 0%,#000000 100%);
+  background: radial-gradient(ellipse at center,  #45484d 0%,#000000 100%);
+  width: auto;
+  height: 100%;
 }
 
 .axis path,
@@ -50,22 +83,6 @@ body {
   left: 0;
 }
 
-#upper_body{
-  width: 100%;
-  height: 250px;
-  background-color: orange;
-  position: relative;
-}
-
-#search_wrapper{
-  width: 700px;
-  margin: 0 auto;
-  position: absolute;
-  bottom: 5px;
-  transform: translate(-50%, -50%);
-  left: 50%;
-}
-
 #lower_body{
   width:100%;
   height:500px;
@@ -73,8 +90,248 @@ body {
 }
 
 #graph_wrapper{
-  width:960px;
-  height: 300px;
+  width: 98%;
+  height: 98%;
   /*background-color: red;*/
   margin: 0 auto;
 }
+
+/*Search Bar Styling*/
+.webdesigntuts-workshop {
+  height: 11%;
+  width: 60%;
+  background: #111;
+  background: linear-gradient(#1b1b1b, #111);
+  border: 1px solid #000;
+  border-radius: 5px;
+  box-shadow: inset 0 0 0 1px #272727;
+  display: inline-block;
+  font-size: 0px;
+  margin-top: 3%;
+  margin-left: 17%;
+  padding: 20px;
+  position: relative;
+  z-index: 1;
+}
+
+.webdesigntuts-workshop:before {
+  background: #444;
+  background: linear-gradient(left, #151515, #444, #151515);
+  top: 192px;
+}
+
+.webdesigntuts-workshop:after {
+  background: #000;
+  background: linear-gradient(left, #151515, #000, #151515);
+  top: 191px;
+}
+
+.webdesigntuts-workshop input {
+  background: #222;
+  background: linear-gradient(#333, #222);
+  border: 1px solid #444;
+  border-radius: 5px 0 0 5px;
+  box-shadow: 0 2px 0 #000;
+  color: #888;
+  display: block;
+  float: left;
+  font-family: 'Cabin', helvetica, arial, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  height: 40px;
+  margin: 0;
+  margin-right: 0.5%;
+  padding: 0 10px;
+  text-shadow: 0 -1px 0 #000;
+  width: 85%;
+}
+
+.ie .webdesigntuts-workshop input {
+  line-height: 40px;
+}
+
+.webdesigntuts-workshop input::-webkit-input-placeholder {
+  color: #888;
+}
+
+.webdesigntuts-workshop input:-moz-placeholder {
+  color: #888;
+}
+
+.webdesigntuts-workshop input:focus {
+  animation: glow 800ms ease-out infinite alternate;
+  background: #222922;
+  background: linear-gradient(#333933, #222922);
+  border-color: #393;
+  box-shadow: 0 0 5px rgba(0,255,0,.2), inset 0 0 5px rgba(0,255,0,.1), 0 2px 0 #000;
+  color: #efe;
+  outline: none;
+}
+
+.webdesigntuts-workshop input:focus::-webkit-input-placeholder {
+  color: #efe;
+}
+
+.webdesigntuts-workshop input:focus:-moz-placeholder {
+  color: #efe;
+}
+
+.webdesigntuts-workshop button {
+  background: #222;
+  background: linear-gradient(#333, #222);
+  box-sizing: content-box;
+  border: 1px solid #444;
+  border-left-color: #000;
+  border-radius: 0 5px 5px 0;
+  box-shadow: 0 2px 0 #000;
+  color: #fff;
+  display: block;
+  float: left;
+  font-family: 'Cabin', helvetica, arial, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  height: 40px;
+  line-height: 40px;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  text-shadow: 0 -1px 0 #000;
+  width: 80px;
+}
+
+.webdesigntuts-workshop button:hover,
+.webdesigntuts-workshop button:focus {
+  background: #292929;
+  background: linear-gradient(#393939, #292929);
+  color: #93d3ff;
+  outline: none;
+}
+
+.webdesigntuts-workshop button:active {
+  background: #292929;
+  background: linear-gradient(#393939, #292929);
+  box-shadow: 0 1px 0 #000, inset 1px 0 1px #222;
+  top: 1px;
+}
+
+@keyframes glow {
+  0% {
+    border-color: #112199;
+    box-shadow: 0 0 5px rgba(37, 136, 255, 0.2), inset 0 0 5px rgba(0,255,0,.1), 0 2px 0 #000;
+  }
+  100% {
+    border-color: #adc9ff;
+    box-shadow: 0 0 20px rgba(106, 206, 255, 0.85), inset 0 0 10px rgba(29, 39, 255, 0.86), 0 2px 0 #000;
+  }
+}
+
+
+/*Twitter Text*/
+.twitter_animation {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 50px;
+  line-height: 40px;
+  font-family: 'Lato', sans-serif;
+  height: 160px;
+  overflow:hidden;
+  width: 40%;
+}
+
+.visible {
+  font-weight:600;
+  overflow:hidden;
+  height:40px;
+  padding:0 40px;
+}
+
+p {
+  display:inline;
+  color: deepskyblue;
+  float:left;
+  margin:0;
+  margin-right: 5%;
+}
+
+ul {
+  margin-top:0;
+  margin-left: 35%;
+  width: 70%;
+  text-align:left;
+  list-style:none;
+  color: cornsilk;
+  -webkit-animation-name: change;
+  -webkit-animation-duration: 6s;
+  -webkit-animation-iteration-count: infinite;
+  -o-animation-name: change;
+  -o-animation-duration: 6s;
+  -o-animation-iteration-count: infinite;
+  -moz-animation-name: change;
+  -moz-animation-duration: 6s;
+  -moz-animation-iteration-count: infinite;
+  animation-name: change;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+}
+
+ul li {
+  line-height:41px;
+  margin:0;
+}
+
+@-webkit-keyframes opacity {
+  0%, 40%, 80% {opacity:0;}
+  20%, 60%, 100% {opacity:1;}
+}
+
+@-webkit-keyframes change {
+  0%, 12%, 100% {transform:translateY(0);}
+  17%,29% {transform:translateY(-20%);}
+  34%,46% {transform:translateY(-42%);}
+  51%,63% {transform:translateY(-60%);}
+  68%,80% {transform:translateY(-82%);}
+}
+
+@keyframes opacity {
+  0%, 40%, 80% {opacity:0;}
+  20%, 60%, 100% {opacity:1;}
+}
+
+@keyframes change {
+  0%, 12%, 100% {transform:translateY(0);}
+  17%,29% {transform:translateY(-20%);}
+  34%,46% {transform:translateY(-42%);}
+  51%,63% {transform:translateY(-60%);}
+  68%,80% {transform:translateY(-82%);}
+}
+
+@-moz-keyframes change {
+  0%, 12%, 100% {transform:translateY(0);}
+  17%,29% {transform:translateY(-20%);}
+  34%,46% {transform:translateY(-42%);}
+  51%,63% {transform:translateY(-60%);}
+  68%,80% {transform:translateY(-82%);}
+}
+
+@-moz-keyframes opacity {
+  0%, 40%, 80% {opacity:0;}
+  20%, 60%, 100% {opacity:1;}
+}
+
+@-o-keyframes change {
+  0%, 12%, 100% {transform:translateY(0);}
+  17%,29% {transform:translateY(-20%);}
+  34%,46% {transform:translateY(-42%);}
+  51%,63% {transform:translateY(-60%);}
+  68%,80% {transform:translateY(-82%);}
+}
+
+@-o-keyframes opacity {
+  0%, 40%, 80% {opacity:0;}
+  20%, 60%, 100% {opacity:1;}
+}
+
+
+
