--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,32 +1,55 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-
 <html>
+
 <head>
+
     <link rel="stylesheet" type="text/css" href="../public/stylesheets/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="../public/javascripts/script.js"></script>
-    <title>Analyse Sentiment</title>
+
+    <title>Twitter Analyser</title>
+
 </head>
+
 <body>
-<div id="upper_body">
-    <div id="search_wrapper">
-        <div class="input-group">
-            <input type="text" class="form-control" name="q" placeholder="Search.." id="search_key" value="">
-            <span class="input-group-btn">
-							<button class="btn btn-info" type="submit" onclick="Search()">  Search  </button>
-					</span>
+
+<div class="container">
+
+    <!--Search Bar-->
+    <section class="webdesigntuts-workshop">
+        <input type="search" placeholder="type your hashtags here">
+        <button id="search_button" type="submit" onclick="Search()">Search</button>
+    </section>
+
+    <!--Animation-->
+    <div class="twitter_animation">
+        <div class="visible">
+            <p>Twitter # </p>
+            <ul>
+                <li>australia</li>
+                <li>brisbane</li>
+                <li>qut</li>
+                <li>cloud</li>
+                <li>computing</li>
+            </ul>
         </div>
     </div>
-</div>
-<div id="lower_body">
-    <div id="graph_wrapper">
-        <div id="graph"></div>
+
+    <!--Graph-->
+    <div id="lower_body">
+        <div id="graph_wrapper">
+            <div id="graph"></div>
+        </div>
     </div>
+
 </div>
 </body>
 </html>
