--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+
+    
     <script type="text/javascript" src="../public/javascripts/script.js"></script>
+
 
     <title>Twitter Analyser</title>
 
