--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
 
     <!--Search Bar-->
     <section class="webdesigntuts-workshop">
-        <input type="search" placeholder="type your hashtags here">
+        <input id="search_key" type="search" placeholder="type your hashtags here">
         <button id="search_button" type="submit" onclick="Search()">Search</button>
     </section>
 
