--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,7 @@
     <section class="webdesigntuts-workshop">
         <input id="search_key" type="search" placeholder="type your hashtags here">
         <button id="search_button" type="submit" onclick="Search()">Search</button>
+        <button id="stop_button" type="submit" onclick="Stop_search()">Stop</button>
     </section>
 
     <!--Animation-->
